--- a/appveyor.yml
+++ b/appveyor.yml
@@ -1,16 +1,19 @@
-version: 0.2.0-{build}
+version: build-{build}-{branch}
 pull_requests:
   do_not_increment_build_number: true
+branches:
+  only:
+  - master
 image: Visual Studio 2017
 configuration: Release
 before_build:
 - cmd: nuget restore
 build:
-  project: Calcex.Core.sln
+  project: Calcex.sln
   verbosity: minimal
 after_build:
 - cmd: >-
-    set VersionSuffix=alpha%APPVEYOR_BUILD_NUMBER%
+    set VersionSuffix=build%APPVEYOR_BUILD_NUMBER%
 
     dotnet pack Calcex.Core
 test:
